--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Nanum+Gothic&display=swap');
+
+
 .App {
   text-align: center;
+  font-family: 'Nanum Gothic', sans-serif;
+
 }
 
 
@@ -13,6 +18,11 @@
   border: 1px solid green;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding: 2%;
+}
+
+.Header span {
+
 }
 
 .About {
@@ -25,6 +35,11 @@
   border: 1px solid green;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding: 3%;
+}
+
+.About p {
+
 }
 
 .Projects {
