--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -11,13 +11,12 @@ a:hover {
 .App {
   text-align: center;
   font-family: 'Nanum Gothic', sans-serif;
-  
 }
 
 
 .Header {
   background-color: #ffffff;
-  min-height: 20vh;
+  min-height: 15vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -29,13 +28,14 @@ a:hover {
 
 .About {
   background-color: #ffffff;
-  min-height: 40vh;
+  min-height: 30vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   padding: 5%;
+  letter-spacing: .2em;
 }
 
 .About p {
